--- a/question/level-1/English/level_1_eng_ question_structures.html
+++ b/question/level-1/English/level_1_eng_ question_structures.html
@@ -29,126 +29,127 @@
     <script>
       const questions = [
   {
-    question: "Complete the sentence with the best question word. ________ are you late?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ are you late?</span>",
     options: ["Why", "Where"],
     correct: "Why",
     explanation: "'Why' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ will you come?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ will you come?</span>",
     options: ["when", "where"],
     correct: "when",
     explanation: "'when' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ are you happy?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ are you happy?</span>",
     options: ["why", "what"],
     correct: "why",
     explanation: "'why' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your best friend?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your best friend?</span>",
     options: ["who", "how"],
     correct: "how",
     explanation: "'how' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ do you live?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ do you live?</span>",
     options: ["where", "why"],
     correct: "why",
     explanation: "'why' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is knocking at the door?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is knocking at the door?</span>",
     options: ["who", "how"],
     correct: "how",
     explanation: "'how' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your favorite color?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your favorite color?</span>",
     options: ["what", "where"],
     correct: "what",
     explanation: "'what' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your birthday?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your birthday?</span>",
     options: ["who", "when"],
     correct: "when",
     explanation: "'when' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is playing cricket?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is playing cricket?</span>",
     options: ["who", "how"],
     correct: "who",
     explanation: "'who' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ are you crying?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ are you crying?</span>",
     options: ["why", "who"],
     correct: "why",
     explanation: "'why' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ are you going?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ are you going?</span>",
     options: ["how", "where"],
     correct: "where",
     explanation: "'where' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is knocking?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is knocking?</span>",
     options: ["who", "where"],
     correct: "where",
     explanation: "'where' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ are you feeling?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ are you feeling?</span>",
     options: ["how", "why"],
     correct: "why",
     explanation: "'why' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your teacher?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your teacher?</span>",
     options: ["who", "why"],
     correct: "why",
     explanation: "'why' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your brother?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your brother?</span>",
     options: ["who", "when"],
     correct: "when",
     explanation: "'when' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is playing outside?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is playing outside?</span>",
     options: ["who", "how"],
     correct: "who",
     explanation: "'who' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your name?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your name?</span>",
     options: ["how", "who"],
     correct: "who",
     explanation: "'who' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your favorite teacher?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your favorite teacher?</span>",
     options: ["who", "when"],
     correct: "when",
     explanation: "'when' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is coming to dinner?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is coming to dinner?</span>",
     options: ["when", "who"],
     correct: "when",
     explanation: "'when' is the correct question word."
   },
   {
-    question: "Complete the sentence with the best question word. ________ is your father?",
+    question: "Complete the sentence with the best question word.<br><span style='color:black'>________ is your father?</span>",
     options: ["when", "where"],
     correct: "where",
     explanation: "'where' is the correct question word."
   }
 ];
+
 
     </script>
 
