Added 3 english exercises, fixed drag and drop to have more than 2 options and bxes updated the drag and drop logic too, with that also added a new line/s of code in each html file

--- a/question/Level 1 Maths/level_1_addition_upto_40.html
+++ b/question/Level 1 Maths/level_1_addition_upto_40.html
@@ -155,6 +155,10 @@
     <div id="site-footer-placeholder"></div>
     <!-- point to your main quiz logic -->
     <script src="../../js/script.js"></script>
-    <script src="../../js/partials.js"></script>
+    <script src="../../js/partials.js"></script><script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
