--- a/question/level-1/English/level_1_eng_Identify_part1.html
+++ b/question/level-1/English/level_1_eng_Identify_part1.html
@@ -480,5 +480,10 @@
     </script>
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
