--- a/question/level-1/English/level_1_eng_verbs-to_be_present_tense.html
+++ b/question/level-1/English/level_1_eng_verbs-to_be_present_tense.html
@@ -216,6 +216,11 @@
     <!-- point to your main quiz logic -->
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
 
