--- a/question/level-1/English/level1_eng_drag_&_drop/level_1_eng_drag_and_drop_proper-common_nouns.html
+++ b/question/level-1/English/level1_eng_drag_&_drop/level_1_eng_drag_and_drop_proper-common_nouns.html
@@ -170,5 +170,10 @@
   <!-- Footer Placeholder -->
   <div id="site-footer-placeholder"></div>
   <script src="../../../../js/partials.js"></script>
+  <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
 </body>
 </html>
