--- a/question/level-1/English/level_1_eng_Identify_part2.html
+++ b/question/level-1/English/level_1_eng_Identify_part2.html
@@ -430,5 +430,10 @@
     </script>
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
