--- a/question/level-1/English/level_1_eng_adverb.html
+++ b/question/level-1/English/level_1_eng_adverb.html
@@ -156,6 +156,9 @@
     <!-- point to your main quiz logic -->
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });</script>
   </body>
 </html>
 
