--- a/question/level-1/English/level_1_eng_identify_cocktails.html
+++ b/question/level-1/English/level_1_eng_identify_cocktails.html
@@ -156,5 +156,10 @@ const questions = [
     <!-- point to your main quiz logic -->
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
