--- a/question/level-1/English/level_1_eng_identify_questions.html
+++ b/question/level-1/English/level_1_eng_identify_questions.html
@@ -149,5 +149,10 @@ const questions = [
     <div id="site-footer-placeholder"></div>
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
