--- a/question/level-1/English/level_1_eng_object_pronoun.html
+++ b/question/level-1/English/level_1_eng_object_pronoun.html
@@ -57,5 +57,10 @@
     <!-- point to your main quiz logic -->
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+    initMCQQuiz(questions);
+  });
+    </script>
   </body>
 </html>
