minor changes in level 1/ english skills

--- a/start-page2/Level 1/subject_level1_english_options.html
+++ b/start-page2/Level 1/subject_level1_english_options.html
@@ -152,7 +152,7 @@
       <!-- 18 -->
       <div class="card" data-level="18">
         <div class="card-icon">S</div>
-        <h3 class="card-title">singular plural </h3>
+        <h3 class="card-title">Singular plural </h3>
         <p class="card-desc"></p>
         <a href="../../question/level-1/English/level_1_eng_singular_plural.html" class="card-btn">Start</a>
       </div>
@@ -160,7 +160,7 @@
       <!-- 19 -->
       <div class="card" data-level="19">
         <div class="card-icon">S</div>
-        <h3 class="card-title">synonym</h3>
+        <h3 class="card-title">Synonym</h3>
         <p class="card-desc"></p>
         <a href="../../question/level-1/English/level_1_eng_synonym.html" class="card-btn">Start</a>
       </div>
