--- a/start-page2/Level 1/subject_level1_english_options.html
+++ b/start-page2/Level 1/subject_level1_english_options.html
@@ -40,7 +40,7 @@
       <!-- 4 -->
       <div class="card" data-level="4">
         <div class="card-icon">A</div>
-        <h3 class="card-title">antonym</h3>
+        <h3 class="card-title">Antonym</h3>
         <p class="card-desc"></p>
         <a href="../../question/level-1/English/level_1_eng_antonym.html" class="card-btn">Start</a>
       </div>
@@ -228,3 +228,4 @@
   <script src="../../js/partials.js"></script>
 </body>
 </html>
+
