added and fixed 5 exercies

--- a/start-page2/Level 1/Level1_math_options.html
+++ b/start-page2/Level 1/Level1_math_options.html
@@ -208,6 +208,34 @@
         <p class="card-desc">Subtract</p>
         <a href="../../question/Level 1 Maths/level_1_subtraction_till_50.html" class="card-btn">Start</a>
       </div>
+
+      <div class="card" data-level="27">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Number Line upto 20</h3>
+        <p class="card-desc">Number-Line</p>
+        <a href="../../question/Level 1 Maths/level_1_number_line_upto_20.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="27">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Number Line upto 30</h3>
+        <p class="card-desc">Number-Line</p>
+        <a href="../../question/Level 1 Maths/level_1_number_line_upto_30.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="27">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Number Line upto 40</h3>
+        <p class="card-desc">Number-Line</p>
+        <a href="../../question/Level 1 Maths/level_1_number_line_upto_40.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="27">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Number Line upto 50</h3>
+        <p class="card-desc">Number-Line</p>
+        <a href="../../question/Level 1 Maths/level_1_number_line_upto_50.html" class="card-btn">Start</a>
+      </div>
     </div>
   </main>
 
