Fixed a bug where image wont show up

--- a/question/Level 1 Maths/level_1_number_line_upto_30.html
+++ b/question/Level 1 Maths/level_1_number_line_upto_30.html
@@ -30,215 +30,216 @@
   const questions = [
   {
     question: "What comes after 12?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["13", "14"],
     correct: "13",
     explanation: "On the number line, after 12 comes 13."
   },
   {
     question: "What comes after 25?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["24", "26"],
     correct: "26",
     explanation: "On the number line, after 25 comes 26."
   },
   {
     question: "What comes after 0?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["2", "1"],
     correct: "1",
     explanation: "On the number line, after 0 comes 1."
   },
   {
     question: "What comes after 19?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["20", "18"],
     correct: "20",
     explanation: "On the number line, after 19 comes 20."
   },
   {
     question: "What comes after 8?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["9", "10"],
     correct: "9",
     explanation: "On the number line, after 8 comes 9."
   },
   {
     question: "What comes after 30?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["31", "29"],
     correct: "31",
     explanation: "On the number line, after 30 comes 31."
   },
   {
     question: "What comes after 4?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["6", "5"],
     correct: "5",
     explanation: "On the number line, after 4 comes 5."
   },
   {
     question: "What comes after 28?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["29", "27"],
     correct: "29",
     explanation: "On the number line, after 28 comes 29."
   },
   {
     question: "What comes after 17?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["18", "19"],
     correct: "18",
     explanation: "On the number line, after 17 comes 18."
   },
   {
     question: "What comes after 6?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["7", "8"],
     correct: "7",
     explanation: "On the number line, after 6 comes 7."
   },
   {
     question: "What comes after 23?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["24", "22"],
     correct: "24",
     explanation: "On the number line, after 23 comes 24."
   },
   {
     question: "What comes after 15?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["14", "16"],
     correct: "16",
     explanation: "On the number line, after 15 comes 16."
   },
   {
     question: "What comes after 27?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["28", "26"],
     correct: "28",
     explanation: "On the number line, after 27 comes 28."
   },
   {
     question: "What comes after 1?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["0", "2"],
     correct: "2",
     explanation: "On the number line, after 1 comes 2."
   },
   {
     question: "What comes after 21?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["20", "22"],
     correct: "22",
     explanation: "On the number line, after 21 comes 22."
   },
   {
     question: "What comes after 9?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["11", "10"],
     correct: "10",
     explanation: "On the number line, after 9 comes 10."
   },
   {
     question: "What comes after 29?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["28", "30"],
     correct: "30",
     explanation: "On the number line, after 29 comes 30."
   },
   {
     question: "What comes after 3?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["4", "5"],
     correct: "4",
     explanation: "On the number line, after 3 comes 4."
   },
   {
     question: "What comes after 11?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["12", "13"],
     correct: "12",
     explanation: "On the number line, after 11 comes 12."
   },
   {
     question: "What comes after 14?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["16", "15"],
     correct: "15",
     explanation: "On the number line, after 14 comes 15."
   },
   {
     question: "What comes after 20?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["19", "21"],
     correct: "21",
     explanation: "On the number line, after 20 comes 21."
   },
   {
     question: "What comes after 5?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["6", "7"],
     correct: "6",
     explanation: "On the number line, after 5 comes 6."
   },
   {
     question: "What comes after 26?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["25", "27"],
     correct: "27",
     explanation: "On the number line, after 26 comes 27."
   },
   {
     question: "What comes after 7?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["8", "9"],
     correct: "8",
     explanation: "On the number line, after 7 comes 8."
   },
   {
     question: "What comes after 13?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["12", "14"],
     correct: "14",
     explanation: "On the number line, after 13 comes 14."
   },
   {
     question: "What comes after 18?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["19", "20"],
     correct: "19",
     explanation: "On the number line, after 18 comes 19."
   },
   {
     question: "What comes after 22?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["21", "23"],
     correct: "23",
     explanation: "On the number line, after 22 comes 23."
   },
   {
     question: "What comes after 2?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["4", "3"],
     correct: "3",
     explanation: "On the number line, after 2 comes 3."
   },
   {
     question: "What comes after 16?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["18", "17"],
     correct: "17",
     explanation: "On the number line, after 16 comes 17."
   },
   {
     question: "What comes after 24?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["23", "25"],
     correct: "25",
     explanation: "On the number line, after 24 comes 25."
   }
 ];
+
 
 </script>
 
