--- a/question/Level 1 Maths/level_1_number_line_upto_20.html
+++ b/question/Level 1 Maths/level_1_number_line_upto_20.html
@@ -30,147 +30,147 @@
   const questions = [
   {
     question: "What comes after 7?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["8", "6"],
     correct: "8",
     explanation: "On the number line, after 7 comes 8."
   },
   {
     question: "What comes after 15?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["16", "14"],
     correct: "16",
     explanation: "On the number line, after 15 comes 16."
   },
   {
     question: "What comes after 2?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["4", "3"],
     correct: "3",
     explanation: "On the number line, after 2 comes 3."
   },
   {
     question: "What comes after 18?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["19", "20"],
     correct: "19",
     explanation: "On the number line, after 18 comes 19."
   },
   {
     question: "What comes after 10?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["12", "11"],
     correct: "11",
     explanation: "On the number line, after 10 comes 11."
   },
   {
     question: "What comes after 0?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["2", "1"],
     correct: "1",
     explanation: "On the number line, after 0 comes 1."
   },
   {
     question: "What comes after 5?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["6", "4"],
     correct: "6",
     explanation: "On the number line, after 5 comes 6."
   },
   {
     question: "What comes after 12?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["13", "14"],
     correct: "13",
     explanation: "On the number line, after 12 comes 13."
   },
   {
     question: "What comes after 9?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["8", "10"],
     correct: "10",
     explanation: "On the number line, after 9 comes 10."
   },
   {
     question: "What comes after 19?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["20", "18"],
     correct: "20",
     explanation: "On the number line, after 19 comes 20."
   },
   {
     question: "What comes after 3?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["2", "4"],
     correct: "4",
     explanation: "On the number line, after 3 comes 4."
   },
   {
     question: "What comes after 14?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["15", "16"],
     correct: "15",
     explanation: "On the number line, after 14 comes 15."
   },
   {
     question: "What comes after 8?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["10", "9"],
     correct: "9",
     explanation: "On the number line, after 8 comes 9."
   },
   {
     question: "What comes after 6?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["8", "7"],
     correct: "7",
     explanation: "On the number line, after 6 comes 7."
   },
   {
     question: "What comes after 16?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["18", "17"],
     correct: "17",
     explanation: "On the number line, after 16 comes 17."
   },
   {
     question: "What comes after 11?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["10", "12"],
     correct: "12",
     explanation: "On the number line, after 11 comes 12."
   },
   {
     question: "What comes after 4?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["6", "5"],
     correct: "5",
     explanation: "On the number line, after 4 comes 5."
   },
   {
     question: "What comes after 1?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["0", "2"],
     correct: "2",
     explanation: "On the number line, after 1 comes 2."
   },
   {
     question: "What comes after 17?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["18", "16"],
     correct: "18",
     explanation: "On the number line, after 17 comes 18."
   },
   {
     question: "What comes after 13?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["14", "12"],
     correct: "14",
     explanation: "On the number line, after 13 comes 14."
   }
 ];
-
 </script>
+
 
   <!-- Professional Footer -->
     <div id="site-footer-placeholder"></div>
