--- a/question/Level 1 Maths/level_1_number_line_upto_50.html
+++ b/question/Level 1 Maths/level_1_number_line_upto_50.html
@@ -30,334 +30,335 @@
   const questions = [
   {
     question: "What comes after 44?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["43", "45"],
     correct: "45",
     explanation: "On the number line, after 44 comes 45."
   },
   {
     question: "What comes after 7?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["8", "9"],
     correct: "8",
     explanation: "On the number line, after 7 comes 8."
   },
   {
     question: "What comes after 21?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["22", "20"],
     correct: "22",
     explanation: "On the number line, after 21 comes 22."
   },
   {
     question: "What comes after 0?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["1", "2"],
     correct: "1",
     explanation: "On the number line, after 0 comes 1."
   },
   {
     question: "What comes after 30?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["29", "31"],
     correct: "31",
     explanation: "On the number line, after 30 comes 31."
   },
   {
     question: "What comes after 12?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["13", "11"],
     correct: "13",
     explanation: "On the number line, after 12 comes 13."
   },
   {
     question: "What comes after 48?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["49", "47"],
     correct: "49",
     explanation: "On the number line, after 48 comes 49."
   },
   {
     question: "What comes after 25?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["24", "26"],
     correct: "26",
     explanation: "On the number line, after 25 comes 26."
   },
   {
     question: "What comes after 36?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["35", "37"],
     correct: "37",
     explanation: "On the number line, after 36 comes 37."
   },
   {
     question: "What comes after 19?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["18", "20"],
     correct: "20",
     explanation: "On the number line, after 19 comes 20."
   },
   {
     question: "What comes after 40?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["41", "39"],
     correct: "41",
     explanation: "On the number line, after 40 comes 41."
   },
   {
     question: "What comes after 9?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["8", "10"],
     correct: "10",
     explanation: "On the number line, after 9 comes 10."
   },
   {
     question: "What comes after 34?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["33", "35"],
     correct: "35",
     explanation: "On the number line, after 34 comes 35."
   },
   {
     question: "What comes after 16?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["17", "18"],
     correct: "17",
     explanation: "On the number line, after 16 comes 17."
   },
   {
     question: "What comes after 46?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["45", "47"],
     correct: "47",
     explanation: "On the number line, after 46 comes 47."
   },
   {
     question: "What comes after 3?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["2", "4"],
     correct: "4",
     explanation: "On the number line, after 3 comes 4."
   },
   {
     question: "What comes after 29?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["30", "28"],
     correct: "30",
     explanation: "On the number line, after 29 comes 30."
   },
   {
     question: "What comes after 15?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["14", "16"],
     correct: "16",
     explanation: "On the number line, after 15 comes 16."
   },
   {
     question: "What comes after 41?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["42", "40"],
     correct: "42",
     explanation: "On the number line, after 41 comes 42."
   },
   {
     question: "What comes after 50?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["49", "51"],
     correct: "51",
     explanation: "On the number line, after 50 comes 51."
   },
   {
     question: "What comes after 27?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["26", "28"],
     correct: "28",
     explanation: "On the number line, after 27 comes 28."
   },
   {
     question: "What comes after 10?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["11", "12"],
     correct: "11",
     explanation: "On the number line, after 10 comes 11."
   },
   {
     question: "What comes after 23?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["24", "25"],
     correct: "24",
     explanation: "On the number line, after 23 comes 24."
   },
   {
     question: "What comes after 32?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["31", "33"],
     correct: "33",
     explanation: "On the number line, after 32 comes 33."
   },
   {
     question: "What comes after 5?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["6", "7"],
     correct: "6",
     explanation: "On the number line, after 5 comes 6."
   },
   {
     question: "What comes after 38?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["37", "39"],
     correct: "39",
     explanation: "On the number line, after 38 comes 39."
   },
   {
     question: "What comes after 18?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["19", "20"],
     correct: "19",
     explanation: "On the number line, after 18 comes 19."
   },
   {
     question: "What comes after 14?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["15", "16"],
     correct: "15",
     explanation: "On the number line, after 14 comes 15."
   },
   {
     question: "What comes after 2?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["3", "4"],
     correct: "3",
     explanation: "On the number line, after 2 comes 3."
   },
   {
     question: "What comes after 26?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["25", "27"],
     correct: "27",
     explanation: "On the number line, after 26 comes 27."
   },
   {
     question: "What comes after 33?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["34", "32"],
     correct: "34",
     explanation: "On the number line, after 33 comes 34."
   },
   {
     question: "What comes after 28?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["29", "30"],
     correct: "29",
     explanation: "On the number line, after 28 comes 29."
   },
   {
     question: "What comes after 8?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["9", "7"],
     correct: "9",
     explanation: "On the number line, after 8 comes 9."
   },
   {
     question: "What comes after 49?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["50", "48"],
     correct: "50",
     explanation: "On the number line, after 49 comes 50."
   },
   {
     question: "What comes after 6?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["7", "8"],
     correct: "7",
     explanation: "On the number line, after 6 comes 7."
   },
   {
     question: "What comes after 20?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["19", "21"],
     correct: "21",
     explanation: "On the number line, after 20 comes 21."
   },
   {
     question: "What comes after 43?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["44", "42"],
     correct: "44",
     explanation: "On the number line, after 43 comes 44."
   },
   {
     question: "What comes after 35?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["36", "37"],
     correct: "36",
     explanation: "On the number line, after 35 comes 36."
   },
   {
     question: "What comes after 42?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["41", "43"],
     correct: "43",
     explanation: "On the number line, after 42 comes 43."
   },
   {
     question: "What comes after 31?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["30", "32"],
     correct: "32",
     explanation: "On the number line, after 31 comes 32."
   },
   {
     question: "What comes after 17?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["18", "19"],
     correct: "18",
     explanation: "On the number line, after 17 comes 18."
   },
   {
     question: "What comes after 1?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["2", "0"],
     correct: "2",
     explanation: "On the number line, after 1 comes 2."
   },
   {
     question: "What comes after 39?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["38", "40"],
     correct: "40",
     explanation: "On the number line, after 39 comes 40."
   },
   {
     question: "What comes after 22?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["21", "23"],
     correct: "23",
     explanation: "On the number line, after 22 comes 23."
   },
   {
     question: "What comes after 13?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["14", "15"],
     correct: "14",
     explanation: "On the number line, after 13 comes 14."
   },
   {
     question: "What comes after 47?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["48", "49"],
     correct: "48",
     explanation: "On the number line, after 47 comes 48."
   },
   {
     question: "What comes after 4?",
-    image: "../../../image/level_1_math/number_line_1_to_50.jpg",
+    image: "../../image/level_1_math/number_line_1_to_50.jpg",
     options: ["6", "5"],
     correct: "5",
     explanation: "On the number line, after 4 comes 5."
   }
 ];
+
 
 </script>
   
