added 8 new exercises

--- a/start-page2/Level 1/Level1_math_options.html
+++ b/start-page2/Level 1/Level1_math_options.html
@@ -236,6 +236,43 @@
         <p class="card-desc">Number-Line</p>
         <a href="../../question/Level 1 Maths/level_1_number_line_upto_50.html" class="card-btn">Start</a>
       </div>
+
+      <div class="card" data-level="28">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Odd even upto 20</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/Level 1 Maths/level_1_odd_even_till_20.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="29">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Odd even upto 30</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/Level 1 Maths/level_1_odd_even_till_30.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="30">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Odd even upto 50</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/Level 1 Maths/level_1_odd_even_till_50.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="31">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Odd even upto 100</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/Level 1 Maths/level_1_odd_even_till_100.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="32">
+        <div class="card-icon">➖</div>
+        <h3 class="card-title">Place Value</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/Level 1 Maths/level_1_place_value.html" class="card-btn">Start</a>
+      </div>
+
+      
     </div>
   </main>
 
