--- a/start-page2/Level 1/subject_level1_english_options.html
+++ b/start-page2/Level 1/subject_level1_english_options.html
@@ -228,6 +228,34 @@
         <p class="card-desc"></p>
         <a href="../../question/level-1/English/level_1_eng_who_how_all.html" class="card-btn">Start</a>
       </div>
+
+      <div class="card" data-level="28">
+        <div class="card-icon">S</div>
+        <h3 class="card-title">Scrambled Words</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/level-1/English/level1_eng_drag_&_drop/level_1_eng_drag_and_drop_scrambled_words.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="29">
+        <div class="card-icon">P</div>
+        <h3 class="card-title">Preposition</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/level-1/English/level_1_eng_preposition.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="30">
+        <div class="card-icon">D</div>
+        <h3 class="card-title">Define</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/level-1/English/level_1_eng_define.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="31">
+        <div class="card-icon">I</div>
+        <h3 class="card-title">Identify Image</h3>
+        <p class="card-desc">Verbs</p>
+        <a href="../../question/level-1/English/level1_eng_identify_image_verbs.html" class="card-btn">Start</a>
+      </div>
     </div>
   </main>
 
