Update English options page with new content

--- a/start-page2/Level 1/subject_level1_english_options.html
+++ b/start-page2/Level 1/subject_level1_english_options.html
@@ -256,6 +256,27 @@
         <p class="card-desc">Verbs</p>
         <a href="../../question/level-1/English/level1_eng_identify_image_verbs.html" class="card-btn">Start</a>
       </div>
+
+      <div class="card" data-level="32">
+        <div class="card-icon">I</div>
+        <h3 class="card-title">Vocabulary & Meaning </h3>
+        <p class="card-desc"></p>
+        <a href="../../question/level-1/English/level1_eng_vocabulary.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="33">
+        <div class="card-icon">I</div>
+        <h3 class="card-title">Past Participle</h3>
+        <p class="card-desc"></p>
+        <a href="../../question/level-1/English/level1_eng_identify_past_participle.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="34">
+        <div class="card-icon">I</div>
+        <h3 class="card-title">Verbs Pronounsl</h3>
+        <p class="card-desc">Image</p>
+        <a href="../../question/level-1/English/level1_eng_verbs_pronouns.html" class="card-btn">Start</a>
+      </div>
     </div>
   </main>
 
@@ -264,4 +285,5 @@
   <script src="../../js/partials.js"></script>
 </body>
 </html>
+
 
